recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:4: error: not found: value sierpsinski
			sierpsinski(level-1, length/2);
                        ^